tests/snapshots/ui_tests__snapshot_expanded_line_overlay_narrow.snap
---
source: tests/ui_tests.rs
expression: output
---
web [Stopped] | worker [Stopped]                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
[12:00:00] web: Starting web server on port 3000                                                                        
[12:00:00] web: GET /api/users 200 OK                                                                                   
[12:00:00] worker: Processing job #1234                                                                                 
[12:00:00] web: ERROR: Database connection failed                                                                       
[12:00:00] worker: Job #1234 completed successfully                                                                     
[12:00:00] w┌ Expanded Line View ──────────────────────────────────────────────────────────────────────────┐            
[12:00:00] w│Expanded Log Line                                                                             │            
[12:00:00] w│                                                                                              │            
            │Timestamp: 2024-12-10 12:00:00                                                                │            
            │Process: web                                                                                  │            
            │Batch: 1                                                                                      │            
            │Line: 2 of 8                                                                                  │            
            │                                                                                              │            
            │Message:                                                                                      │            
            │                                                                                              │            
            │GET /api/users 200 OK                                                                         │            
            │                                                                                              │            
            │Press ESC to close | Enter to show context | c to copy                                        │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            │                                                                                              │            
            └──────────────────────────────────────────────────────────────────────────────────────────────┘            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 8 lines   | 1 batches [SCROLL]                                                                 
Press : for commands, / to search, q to quit
