tests/snapshots/ui_tests__snapshot_expanded_line_panel_wide.snap
---
source: tests/ui_tests.rs
expression: output
---
web [Stopped] | worker [Stopped]                                                                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                            ┌ Line Details ────────────────────────────────────────────────────────┐
[12:00:00] web: Starting web server on port 3000                                                            │Line Details                                                          │
[12:00:00] web: GET /api/users 200 OK                                                                       │                                                                      │
[12:00:00] worker: Processing job #1234                                                                     │Timestamp: 2024-12-10 12:00:00                                        │
[12:00:00] web: ERROR: Database connection failed                                                           │Process: web                                                          │
[12:00:00] worker: Job #1234 completed successfully                                                         │Batch: 1                                                              │
[12:00:00] web: POST /api/auth 201 Created                                                                  │Line: 2 of 8                                                          │
[12:00:00] worker: ERROR: Failed to process job #5678                                                       │                                                                      │
[12:00:00] web: Server ready to accept connections                                                          │Message:                                                              │
                                                                                                            │                                                                      │
                                                                                                            │GET /api/users 200 OK                                                 │
                                                                                                            │                                                                      │
                                                                                                            │ESC close | c copy                                                    │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            │                                                                      │
                                                                                                            └──────────────────────────────────────────────────────────────────────┘
Buffer: 0.0/50 MB (0%) | 8 lines   | 1 batches [SCROLL]                                                                                                                             
Press : for commands, / to search, q to quit
